# GMR-epi-guard

./: .gitattributes  .gitignore  AGENTS.md  README.md  west.yml
firmware/: CMakeLists.txt  Kconfig  prj.conf  prj_m3.conf  prj_m4.conf  prj_m5.conf  prj_wifi.conf  sections-rom.ld
firmware/boards/: doit_esp32_26mhz.overlay  esp32_devkitc_wroom.overlay
firmware/build-m3/: .ninja_deps  .ninja_log  CMakeCache.txt  build_info.yml  cmake_install.cmake  zephyr_modules.txt
firmware/build-m3/Kconfig/: Kconfig.dts  Kconfig.modules
firmware/build-m3/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  syscall_weakdefs_llext.c  zephyr.dts  zephyr.stat
firmware/build-m4/: .ninja_deps  .ninja_log  CMakeCache.txt  build_info.yml  cmake_install.cmake  zephyr_settings.txt
firmware/build-m4/Kconfig/: Kconfig.modules  kconfig_module_dirs.cmake  kconfig_module_dirs.env
firmware/build-m4/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  (+14 more)
firmware/scripts/: embed_dashboard.py
firmware/src/: actuator.c  actuator_feedback.c  actuator_feedback.h  api_client.c  api_client.h  api_client_http.c  api_client_internal.h  api_client_mock.c  dashboard_embed.h  epi_config.c  epi_config.h  epi_names.c  epi_names.h  epi_settings.c  epi_settings.h  epi_shell.c  epi_state.c  epi_state.h  json_codec.c  json_codec.h  main.c  net.c  net.h  net_http.c  net_http.h  validator.c  zbus_channels.c  zbus_channels.h
(+420 files in other folders)
